# p-grid-alert

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
scripts/: runme.sh
src/p_grid_alert/: __main__.py  date_encoding.py  datetime_helpers.py  event_processor.py  pdf_reader.py  smtp_driver.py  utils.py
src/tests/unit/: test_date.py  test_event_processor.py
